# pdforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  font-0008.cid  font-internal.cid  subset.cff  subset.ttx
.claude/: settings.local.json
docs/: line-break-mode-plan.md  printpdf-0.9.1-migration-plan.md  project-issues-fix-plan.md  project-issues.md  schema-spec.md  schema-trait-architecture.md  table-styling-migration.md
examples/: debug_table_data.rs  dynamic_table_usage.rs  font.rs  font_from_bytes.rs  image.rs  inputs_and_table_data_example.rs  inventory_tag.rs  legacy_test.rs  line_dynamic_example.rs  line_example.rs  line_usage.md  memory-efficient-table.rs  object_fit_test.rs  pawn-tag.rs  pdfium.rs  print-renews-profiled.rs  print-renews.rs  quote.rs  renew.rs  simple.rs  simple_combined_test.rs  static_schema_custom_test.rs  svg.rs  table-50pages.rs  table.rs  table_data_test.rs  table_with_static_test.rs  test-printpdf.rs  test_metadata.rs
src/: font.rs  lib.rs  main.rs  utils.rs
src/schemas/: base.rs  dynamic_text.rs  flowing_text.rs  group.rs  image.rs  line.rs  mod.rs  pdf_utils.rs  qrcode.rs  rect.rs  spacer.rs  svg.rs  table.rs  text.rs
templates/: combined_example.json  image-test.json  inventory_tag.json  large-tables-spanning.json  legacy-image-test.json  line-dynamic.json  line-example.json  multi-table-fixed.json  multipage.json  object-fit-test.json  pawn-tag.json  pawn-ticket.json  print-renews.json  quote.json  renew.json  static-schema-custom-test.json  static-schema-test.json  svg.json  table-spacer-summary-page-break.json  table-test.json  table-with-static-simple.json  table-with-static-test.json  table.json  taiger-svg.json  template-01.json  test_metadata.json  text-border-test.json  tiger-svg.json
tests/: render_regression_tests.rs  schema_traits_tests.rs  spacer_integration_tests.rs  table_integration_tests.rs  thread_safety.rs
