[package]
name = "pdforge"
version = "0.7.1"
edition = "2021"

[dependencies]
base64 = "0.22.1"
csscolorparser = "0.7.0"
derive-new = "0.7.0"
icu_segmenter = { version = "1.5.0", features = ["serde"] }
image = { version = "0.25.5", features = ["png"] }
palette = "0.7.6"
printpdf = { version = "0.8", features = ["bmp", "png", "jpeg"]}
qrcode = "0.14.1"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.139"
snafu = "0.8.5"
tera = "1.20.0"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
uuid = { version = "1.16.0", features = ["v4", "v7"] }

[dev-dependencies]
serde_json = "1.0.139"
